[project]
name = "football-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.121.0",
    "flask>=3.1.2",
    "googlesearch-python>=1.3.0",
    "lxml>=6.0.2",
    "pydantic>=2.12.3",
    "uvicorn>=0.38.0",
]
